# GrooveScribe

./: .env.example  .env.true-ai.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.ai/: workflow.yaml
ai_pipeline/: README.md  RUNTIME.md  local_runner.py  pyproject.toml  runner.py  settings.py
ai_pipeline/benchmark/: __init__.py  metrics.py  provenance.py
ai_pipeline/contracts/: __init__.py  pipeline.py
ai_pipeline/midi/: __init__.py  candidate_recommendation.py  errors.py  mapping.py  postprocessor.py  quality.py  simple_midi.py  types.py
ai_pipeline/notation/: __init__.py  errors.py  gate_calibration.py  musescore.py  musicxml.py  pdf.py  performance_gate.py  types.py  validation.py
ai_pipeline/preprocessing/: __init__.py  errors.py  ffmpeg.py
ai_pipeline/source_separation/: __init__.py  base.py  demucs.py  errors.py
ai_pipeline/transcription/: __init__.py  adtof.py  base.py  benchmark_backends.py  errors.py  midi_validation.py
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/migrations/: README.md  env.py
backend/tests/: test_api_error_responses.py  test_celery_job_queue.py  test_cleanup_orphan_job_artifacts.py  test_config.py  test_error_contract.py  test_health.py  test_internal_job_detail_service.py  test_internal_pipeline_snapshot_api.py  test_job_history_and_retry_api.py  test_job_queue.py  test_local_job_queue.py  test_local_job_recovery.py  test_local_storage_adapter.py  test_migrations.py  test_models.py  test_pipeline_log_read_model.py  test_pipeline_service.py  test_pipeline_service_true_ai_smoke.py  test_read_pipeline_snapshot_script.py  test_review_timeline_service.py  test_runtime_diagnostics.py  test_runtime_preflight_api.py  test_storage_contract.py  test_transcription_api_integration.py  test_transcription_apis.py  test_upload_api.py  test_upload_service.py
worker/: pyproject.toml
worker/app/: celery_app.py  config.py  constants.py  db.py  error_handling.py  logging.py  pipeline_runner.py  storage.py
(+226 files in other folders)
