[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groovescribe-ai-pipeline"
version = "0.1.0"
description = "GrooveScribe audio and drum transcription pipeline"
requires-python = ">=3.11"
dependencies = [
  "librosa",
  "soundfile",
  "torchaudio",
  "torch",
  "pretty_midi",
  "mido",
  "music21",
  "demucs"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = [".."]
include = ["ai_pipeline", "ai_pipeline.*"]
