[project]
name = "groovescribe-worker"
version = "0.1.0"
description = "GrooveScribe background worker"
requires-python = ">=3.11"
dependencies = [
  "celery",
  "redis",
  "pydantic-settings"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
